tests/snapshots/cli__tests__baseline-regex-replacement.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: stdin.map(|s|\n            s.split_inclusive('\\n').map(|s| s.to_owned()).collect_vec()),\n    stdout: stdout.split_inclusive('\\n').map(|s| s.to_owned()).collect_vec(),\n    exit_code,\n}"
info:
  stderr: ""
---
args:
  - "\\W"
  - B
stdin:
  - "A; \u0010 B 😫"
stdout:
  - ABBBBBBB
exit_code: 0
