tests/snapshots/cli__tests__baseline-replacement-no-stdin.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args: args.into(), stdin:\n    stdin.map(|s|\n    s.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec()), stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--stdin-detection"
  - force-unreadable
  - "--threads"
  - "1"
  - A
  - "--"
  - B
stdin: ~
stdout: []
exit_code: 0
