tests/snapshots/cli__tests__failing-on-nothing-found-no-trigger.snap
---
source: tests/cli.rs
expression: "CommandResult { args, stdin: stdin.into(), stdout, exit_code }"
---
args:
  - "--fail-none"
  - X
stdin: XYZ
stdout: XYZ
exit_code: 0
